# Glass

./: README.md  org.kde.KStyle.Glass5.json  org.kde.KStyle.Glass6.json  rebuild.sh
colors/: CMakeLists.txt  GlassDark.colors  GlassLight.colors
kdecoration/: glassbutton.cpp  glassdecoration.cpp  glassdecoration.h
kstyle/: CMakeLists.txt  darklystyle.cpp  glassstyle.cpp  glassstyle.h
kstyle/config/ui/: glassstyleconfig.ui
